--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
+# Configuration of the database
 MONGODB_URI=
 PORT=
+
+# Configuration of the JWT
+JWT_SECRET=
+JWT_ACCESS_TOKEN_EXPIRATION=
+
+# Configuration of the email
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
